--- a/templates/index.html
+++ b/templates/index.html
@@ -31,7 +31,7 @@
    {{ prediction_text }}
 
  </div>
- <img src="/static/images/Waterfall.svg" style="width: 400px;position: absolute;bottom: 10px;left: 10px;" alt="Background Image"/>
+ <img src="/static/images/Waterfall.jpg" style="width: 400px;position: absolute;bottom: 10px;left: 10px;" alt="Background Image"/>
 
 </body>
 </html>
